--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">友闻</string>
     <item type="id" name="tag_asyc"></item>
-
+    <item type="id" name="img_unselected"></item>
+    <item type="id" name="img_selected"></item>
 </resources>
